# komix

./: .clang-format  .travis.yml  CMakeLists.txt  Changelog  Doxyfile  README  README.md  README.rst  TODO  build-android.sh  komix.pro  komix.qrc  msvc.pro  unix.pro
cmake/modules/: FindLibUCharDet.cmake  FindQtSingleApplication.cmake  KomiXUtilities.cmake  install.cmake.in
image/: logo.icns
include/utility/: filecontroller.hpp  global.hpp
include/widget/: imagearea.hpp  mainwindow.hpp  preview.hpp  scaleimage.hpp
src/: main.cpp  utility.cpp  utility.hpp
src/model/: filemodel.cpp  filemodel.hpp  localfilemodel.cpp  localfilemodel.hpp
src/model/archive/: archive.cpp  archive.hpp  archivehook.cpp  archivehook.hpp  archivemodel.cpp  archivemodel.hpp  archivemodel_p.hpp  unarchivetask.cpp  unarchivetask.hpp  unarchivetask_p.hpp
src/model/directory/: directoryhook.cpp  directoryhook.hpp  directorymodel.cpp  directorymodel.hpp
src/model/single/: singlehook.cpp  singlehook.hpp  singlemodel.cpp  singlemodel.hpp
src/utility/: archivehook.cpp  archivehook.hpp  archivemodel.cpp  archivemodel.hpp  asynchronousloader.cpp  asynchronousloader.hpp  blockdeviceloader.cpp  blockdeviceloader.hpp  characterdeviceloader.cpp  characterdeviceloader.hpp  characterdeviceloader_p.hpp  deviceloader.cpp  deviceloader.hpp  deviceloader_p.hpp  directorymodel.cpp  directorymodel.hpp  error.cpp  error.hpp  exception.cpp  exception.hpp  filecontroller.cpp  filecontroller.hpp  filecontroller_p.hpp  filemodel.cpp  filemodel.hpp  global.cpp  global.hpp  global_p.hpp  image.cpp  image.hpp  imageloader.cpp  imageloader.hpp  imageloader_p.hpp  imagewrapper.cpp  imagewrapper.hpp  literal.cpp  literal.hpp  singlemodel.cpp  singlemodel.hpp  viewstate.cpp  (+1 more)
src/widget/: about.cpp  about.hpp  about.ui  aboutwidget.cpp  aboutwidget.hpp  aboutwidget.ui  aboutwidget_p.hpp  blockdeviceloader.cpp  blockdeviceloader.hpp  characterdeviceloader.cpp  characterdeviceloader.hpp  characterdeviceloader_p.hpp  deviceloader.cpp  deviceloader.hpp  imagearea.cpp  imagearea.hpp  imageitem.cpp  imageitem.hpp  imageitem_p.hpp  imageproxyitem.cpp  imageproxyitem.hpp  imageproxyitem_p.hpp  imageview.cpp  imageview.hpp  imageview_p.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindow_p.hpp  navigator.cpp  navigator.hpp  navigator.ui  navigator_p.hpp  preference.cpp  preference.hpp  preference.ui  preference_p.hpp  preview.cpp  preview.hpp  scaleimage.cpp  (+10 more)
translations/: ja_JP.ts  zh_TW.ts
